--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "gulp-watch": "^4.3.11"
+  },
+  "dependencies": {
+    "normalize.css": "^7.0.0"
   }
 }
